--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -16,6 +16,11 @@ user.registered=Зарегистрирован
 user.password=Пароль
 user.caloriesPerDay=Норма калорий в день
 
+userTo.name=Имя
+userTo.email=Почта
+userTo.password=Пароль
+userTo.caloriesPerDay=Норма калорий в день
+
 meal.title=Моя еда
 meal.edit=Редактирование еды
 meal.add=Добавление еды
@@ -29,12 +34,17 @@ meal.calories=Калории
 
 common.add=Добавить
 common.select=Выбрать
+common.search=Искать
 common.deleted=Запись удалена
 common.saved=Запись сохранена
 common.enabled=Запись активирована
 common.disabled=Запись деактивирована
 common.errorStatus=Статус ошибки
-common.appError=Ошибка приложения
+
+error.appError=Ошибка приложения
+error.dataNotFound=Данные не найдены
+error.dataError=Ошибка в данных
+error.validationError=Ошибка формата данных
 
 exception.user.duplicateEmail=Пользователь с такой почтой уже есть в приложении
 exception.meal.duplicateDateTime=У вас уже есть еда с такой датой/временем
